--- a/eticaret_uygula/Views/Shared/Components/TrendList/Default.cshtml
+++ b/eticaret_uygula/Views/Shared/Components/TrendList/Default.cshtml
@@ -22,7 +22,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between bg-light border">
                     <a href="/Home/Detay/@item.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detay</a>
-                    <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Sepete Ekle</a>
+                    <a href="/Cart/Add/@item.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Sepete Ekle</a>
                 </div>
             </div>
         </div>
